# moderncmakedomain

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
sphinxcontrib/moderncmakedomain/: __init__.py  cmake.py
tests/: conftest.py  test_basic.py  test_version.py
