[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-moderncmakedomain"
description = "Sphinx Domain for Modern CMake"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Kitware" },
]
keywords = [
    "cmake",
    "documentation",
    "kitware",
    "sphinx",
    "sphinxcontrib",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = ["sphinx"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/scikit-build/moderncmakedomain"


[tool.hatch]
version.path = "sphinxcontrib/moderncmakedomain/__init__.py"
build.targets.wheel.packages = ["sphinxcontrib"]
