[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-moderncmakedomain"
description = "Sphinx Domain for Modern CMake"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Kitware" },
]
keywords = [
    "cmake",
    "documentation",
    "kitware",
    "sphinx",
    "sphinxcontrib",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = ["sphinx>=2"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/scikit-build/moderncmakedomain"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:sphinx.builders.gettext",
]
log_cli_level = "info"
testpaths = ["tests"]

[tool.hatch]
version.path = "sphinxcontrib/moderncmakedomain/__init__.py"
build.targets.wheel.packages = ["sphinxcontrib"]
