[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "sphinxcontrib-moderncmakedomain"
description = "Sphinx Domain for Modern CMake"
readme = "README.md"
keywords = [
  "cmake",
  "documentation",
  "kitware",
  "sphinx",
  "sphinxcontrib",
]
authors = [
  { name = "Kitware" },
]
requires-python = ">=3.7"
classifiers = [
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Sphinx :: Domain",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "sphinx>=2",
]
optional-dependencies.test = [
  "defusedxml",
  # Setuptools is required due to sphinx installing sphinxcontrib extensions that use pkg_resources (fixed upstream but not released yet)
  "pytest",
]
urls.Homepage = "https://github.com/scikit-build/moderncmakedomain"

[tool.hatch]
version.path = "sphinxcontrib/moderncmakedomain/__init__.py"
build.targets.wheel.packages = [
  "sphinxcontrib",
]

[tool.ruff]
exclude = [
  "sphinxcontrib/moderncmakedomain/cmake.py",
  "sphinxcontrib/moderncmakedomain/colors.py",
]
lint.extend-select = [
  "B",   # flake8-bugbear
  "RUF", # Ruff-specific
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:sphinx.builders.gettext",
]
log_cli_level = "info"
testpaths = [
  "tests",
]
