[metadata]
name = sphinxcontrib-moderncmakedomain
version = 0.1
long_description_content_type = text/markdown
long_description= file: README.md
author_email = 
author = Isabella Muerte
license = BSD-3-Clause
platforms = any
url = https://github.com/slurps-mad-rips/moderncmakedomain
description = Sphinx Domain for Modern CMake
packages = find:
keywords =
  sphinxcontrib
  documentation
  kitware
  sphinx
  cmake
namespace_packages=
  sphinxcontrib
classifiers =
  Intended Audience :: Developers,
  Environment :: Console,
  Environment :: Web Evironnment,
  License :: OSI Approved :: BSD License,
  Operating System :: OS Independent,
  Programming Language :: Python :: 3.5,
  Programming Language :: Python :: 3.6,
  Programming Language :: Python :: 3.7,
  Topic :: Documentation,
  Topic :: Utilities
