[metadata]
name = sphinxcontrib-moderncmakedomain
version = 3.12.1
long_description_content_type = text/markdown
long_description= file: README.md
author_email = 
author = Kitware
maintainer_email =
maintainer = Isabella Muerte
license = BSD-3-Clause
platforms = any
url = https://github.com/slurps-mad-rips/moderncmakedomain
description = Sphinx Domain for Modern CMake
keywords = sphinxcontrib, documentation, kitware, sphinx, cmake
classifiers =
  Intended Audience :: Developers
  Environment :: Console
  Environment :: Web Environment
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Documentation
  Topic :: Utilities

[options]
zip_safe = False
namespace_packages = sphinxcontrib
packages = sphinxcontrib.moderncmakedomain
