[metadata]
name = sphinxcontrib_moderncmakedomain
version = 3.21.4
description = Sphinx Domain for Modern CMake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-build/moderncmakedomain
author = Kitware
maintainer = Isabella Muerte
license = BSD-3-Clause
license_file = LICENSE.md
platforms = any
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Utilities
keywords = sphinxcontrib, documentation, kitware, sphinx, cmake

[options]
packages = sphinxcontrib.moderncmakedomain
python_requires = >=3.6
namespace_packages = sphinxcontrib
zip_safe = False
